crates/swc/tests/tsc-references/stringIndexerConstrainsPropertyDeclarations2_es5.1.normal.js
import _class_call_check from "@swc/helpers/lib/_class_call_check.js";
import _inherits from "@swc/helpers/lib/_inherits.js";
import _create_super from "@swc/helpers/lib/_create_super.js";
// String indexer providing a constraint of a user defined type
var A = /*#__PURE__*/ function() {
    "use strict";
    function A() {
        _class_call_check(this, A);
    }
    var _proto = A.prototype;
    _proto.foo = function foo() {
        return "";
    };
    return A;
}();
var B = /*#__PURE__*/ function(A) {
    "use strict";
    _inherits(B, A);
    var _super = _create_super(B);
    function B() {
        _class_call_check(this, B);
        return _super.apply(this, arguments);
    }
    var _proto = B.prototype;
    _proto.bar = function bar() {
        return "";
    };
    return B;
}(A);
var Foo = function Foo() {
    "use strict";
    _class_call_check(this, Foo);
};
var a;
// error
var b = {
    a: A,
    b: B
};
